--- a/F0/login.html
+++ b/F0/login.html
@@ -29,7 +29,7 @@
 				<div class="item">
 					<label for="username" style="background-image: url(E://web_tasks//F0//pic//icon_user.png); background-repeat: no-repeat; color: #fff">____</label>
 					<input type="text" name="username" id="username" placeholder="请输入学号">
-					<span>&nbsp&nbsp&nbsp&nbsp</span>
+					<span class="space"></span>
 					<a href="forget.html" id="findpwd">找回密码</a></br>
 				</div>
 
