--- a/F1/task2/modify.html
+++ b/F1/task2/modify.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="container">
-    <h1>学生信息管理系统——改</h1>
+    <h1 class="page-header">学生信息管理系统——改</h1>
 
     <form class="add"  method="post">
       <div class="form-group">
@@ -38,6 +38,7 @@
       <div class="">
         <button id="cancel" class="btn btn-default" type="reset">取消</button>
         <button id="ok" class="btn btn-primary" onclick="modifyinfo()">确定</button>
+        <input type="button" value="返回" class="btn btn-default pull-right" onclick="history.go(-1)">
       </div>
     </form>
 
