--- a/F1/task2/index.html
+++ b/F1/task2/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="container">
-    <h1>学生信息管理系统</h1>
+    <h1 class="page-header">学生信息管理系统</h1>
       <a href="./add.html" class="btn btn-success btn-lg">增</a>
       <a href="./delete.html" class="btn btn-danger btn-lg">删</a>
       <a href="./modify.html" class="btn btn-primary btn-lg">改</a>
