--- a/F2/carousel.html
+++ b/F2/carousel.html
@@ -2,18 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>轮播图</title>
   <link rel="stylesheet" href="style.css">
   <script src="bs/js/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://apps.bdimg.com/libs/jquerymobile/1.4.5/jquery.mobile-1.4.5.min.css">
-  <script src="https://apps.bdimg.com/libs/jquerymobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-  <!-- <script src="bs/js/jgestures.min.js"></script> -->
   <script src="car.js"></script>
 </head>
 <body>
-  <div id="igs" data-role="main" class="ui-content">
+  <div id="igs" class="igs" class="slide" data-role="main" class="ui-content">
     <div class="ig"><img src="pic/1.jpg" alt="pic1"></div>
     <div class="ig"><img src="pic/2.jpg" alt="pic2"></div>
     <div class="ig"><img src="pic/3.jpg" alt="pic3"></div>
